# orbit-ai-workspace

./: .gitignore  .gitleaksignore  README.md  context.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: __init__.py  auth.py  config.py  errors.py  jwt_verifier.py  middleware.py  supabase_client.py
apps/api/app/models/: __init__.py  responses.py  system.py
apps/api/app/repositories/: __init__.py  notes.py  notes_memory.py  notes_supabase.py
apps/api/app/routers/: __init__.py  ai.py  health.py  notes.py  voice_memos.py
apps/api/app/schemas/: notes.py
apps/api/app/services/: __init__.py  ai_prompting.py  ai_summarization.py  notes.py  openai_provider.py  openai_sdk_adapter.py  openai_workload_identity.py
apps/api/tests/: conftest.py  test_ai_prompting.py  test_ai_summarization.py  test_auth_config.py  test_contract_drift.py  test_jwt_verifier.py  test_notes.py  test_notes_integration_verification.py  test_notes_repository.py  test_notes_supabase_repository.py  test_openai_config.py  test_openai_provider.py  test_openai_sdk_adapter.py  test_openai_workload_identity.py  test_supabase_client_factory.py  test_supabase_fake_sdk_transport.py  test_system_routes.py
apps/api/tests/helpers/: contract_drift_helpers.py  notes_assertions.py  notes_supabase_fake_client.py  supabase_fake_sdk_transport.py
apps/api/tests/integration/: __init__.py  supabase_live_harness.py  test_notes_rls_validation.py  test_supabase_live_harness.py
(+105 files in other folders)
