[project]
name = "synapse-api"
version = "0.0.0"
description = "FastAPI backend for Synapse."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "PyJWT[crypto]>=2.10,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: opt-in integration harness tests",
  "supabase_live: skipped-by-default Supabase live/local harness tests"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
